cmake_minimum_required(VERSION 3.13)

project(DPP-master)
include_directories(${Boost_INCLUDE_DIR})
add_subdirectory(cpr)
include_directories(${CPR_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lssl -lcrypto -lboost_system")
add_executable(tests_dpp main.cpp)
target_link_libraries(tests_dpp ${CPR_LIBRARIES})