cmake_minimum_required(VERSION 3.13)

project(DPP-master)
find_package(Boost 1.65 COMPONENTS program_options REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lboost_system -lcrypto -lssl")
add_executable(tests_dpp main.cpp)
target_link_libraries(tests_dpp LINK_PUBLIC ${Boost_LIBRARIES})
target_include_directories(tests_dpp PRIVATE ${sourcefiles})
include_directories(${sourcefiles})